Bug 1607704 - Remove supression for seemingly fixed issue. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D94854